Fixed bug #35239 (Objects can lose references)